--- a/articles/sql-database/sql-database-single-index.yml
+++ b/articles/sql-database/sql-database-single-index.yml
@@ -75,6 +75,7 @@ sections:
           - html: '(Preview) Nieuwe functies voor Transact-SQL-taal, zoals <a href="https://docs.microsoft.com/sql/t-sql/functions/approx-count-distinct-transact-sql?toc=%2Fazure%2Fsql-database%2Ftoc.json&view=sql-server-2017">APPROX_COUNT_DISTINCT statistische functie</a> en <a href="https://docs.microsoft.com/sql/relational-databases/import-export/examples-of-bulk-access-to-data-in-azure-blob-storage?toc=%2Fazure%2Fsql-database%2Ftoc.json&view=sql-server-2017">bulksgewijs importeren uit Azure Blob-opslag</a>.'
           - html: '(Preview) Nieuwe SQL Server 2019 Online <a href="https://docs.microsoft.com/sql/t-sql/statements/create-columnstore-index-transact-sql?toc=%2Fazure%2Fsql-database%2Ftoc.json&view=sql-server-2017#online--on--off">bouwen</a> en bewerkingen van geclusterde columnstore-index opnieuw opbouwen.'
           - html: '(Preview) Nieuwe <a href="https://docs.microsoft.com/azure/sql-database/sql-database-machine-learning-services-overview">Azure SQL Database-Machine Learning-Services (met R)</a>.'
+          - html: '(Preview) Nieuwe <a href="https://docs.microsoft.com/azure/sql-database/sql-database-serverless">serverloze compute-laag</a> biedt compute automatisch schalen en facturen per seconde voor de rekenkracht die wordt gebruikt.'
   - title: Quickstarts van vijf minuten
     items:
       - type: paragraph
